<resources>
    <string name="app_name">MerlinPhone</string>
    <string name="registration">Registration</string>
    <string name="siplogin">SIPLogin</string>
    <string name="account_profile">Account Profile</string>
    <string name="img_account_profile">img_account_profile</string>
    <string name="username">Username</string>
    <string name="john">John</string>
    <string name="display_name">Display Name</string>
    <string name="john_becker">John Becker</string>
    <string name="auth_login">Auth Login</string>
    <string name="login_hint">893254112</string>
    <string name="auth_password">Auth Password</string>
    <string name="password_hint">*******</string>
    <string name="img_account_settings">img_account_settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="domain_realm">Domain/Realm</string>
    <string name="domain_realm_hint">Domain/Realm</string>
    <string name="server_ip_or_domain">Server IP or Domain</string>
    <string name="server_port_default_5060">Server Port (Default: 5060)</string>
    <string name="server_port">Server Port</string>
    <string name="sip_registration">SIP Registration</string>
    <string name="server_ip">Server IP</string>
    <string name="title_account_info">ACCOUNT INFO</string>
    <string name="title_activity_vax_phone">MerlinPhone</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="encryption_tunnel">Encryption Tunnel</string>
    <string name="video_bitrate">Video Bitrate</string>
    <string name="video_quality">Video Quality</string>
    <string name="video_codecs">Video Codecs</string>
    <string name="audio_codecs">Audio Codecs</string>
    <string name="speaker_microphone"><![CDATA[Speaker & Microphone]]></string>
    <string name="ring_tones">Ring tones</string>
    <string name="voice_changer">Voice Changer</string>
    <string name="network">Network</string>
    <string name="digit_dtmf">Digit DTMF</string>
    <string name="tunnel_ip">Tunnel IP</string>
    <string name="tunnel_enable">Tunnel Enable</string>
    <string name="tunnel_server_ip"><![CDATA[< Tunnel Server IP >]]></string>
    <string name="tunnel_port">Tunnel Port</string>
    <string name="tunnel_server_port"><![CDATA[< Tunnel Server Port >]]></string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="vp8">VP8</string>
    <string name="h263plus">H263+</string>
    <string name="h263">H263</string>
    <string name="g711u_law">G711u-Law</string>
    <string name="g711a_law">G711a-Law</string>
    <string name="g729">G729</string>
    <string name="ilbc">iLBC</string>
    <string name="gsm">GSM</string>
    <string name="speaker">Phone Speaker</string>
    <string name="auto_gain">Auto Gain</string>
    <string name="volume_boost">Volume Boost</string>
    <string name="microphone">Microphone</string>
    <string name="echo_cancellation_heading">ECHO CANCELLATION</string>
    <string name="echo_cancellation">Echo Cancellation</string>
    <string name="groovy">Groovy</string>
    <string name="digital_rain">Digital Rain</string>
    <string name="magical">Magical</string>
    <string name="deja_vu">Deja Vu</string>
    <string name="maximum">Maximum</string>
    <string name="office_phone">Office Phone</string>
    <string name="grandpa_drunk">Grandpa drunk</string>
    <string name="teen_boy">Teen boy</string>
    <string name="household_robot">Household robot</string>
    <string name="helium_inhaled">Helium inhaled</string>
    <string name="chipmunk">Chipmunk</string>
    <string name="local_port_sip">Local Port SIP</string>
    <string name="choose_randomly">Choose Randomly</string>
    <string name="auto_reachability">Auto Reachability</string>
    <string name="local_port_rtp">Local Port RTP</string>
    <string name="outband_rfc2833">Outband (RFC2833)</string>
    <string name="sip_info">SIP INFO</string>
    <string name="inband_voice_based">Inband (Voice Based)</string>
    <string name="multi_task_mode">Multi-task Mode</string>
    <string name="diagnostic_log">Diagnostic Log</string>
    <string name="reset_all_settings">RESET ALL SETTINGS</string>
    <string name="online">Online</string>
    <string name="away">Away</string>
    <string name="on_phone">On Phone</string>
    <string name="sip_server_ip_or_domain">SIP Server IP or Domain</string>
    <string name="auh_password">Auh Password</string>
    <string name="choose_ringtone"><b>Choose Ringtone</b></string>
    <string name="choose_video_bitrate"><b>Choose Video Bitrate</b></string>
    <string name="choose_video_quality"><b>Choose Video Quality</b></string>
    <string name="choose_voice"><b>Choose Voice Changer</b></string>
    <string name="choose_digit_dtmf"><b>Choose Digit DTMF</b></string>
    <string name="choose_video_codecs"><b>Choose Video Codecs</b></string>
    <string name="choose_audio_codecs"><b>Choose Audio Codecs</b></string>
    <string name="add_account_sip"><b>Add Account SIP</b></string>
    <string name="title_settings">SETTINGS</string>
    <string name="recent">RECENT</string>
    <string name="chat">CHAT</string>
    <string name="dialpad">SIP PHONE DIALER</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_status"><b>My Status</b></string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="abc">ABC</string>
    <string name="_3">3</string>
    <string name="def">DEF</string>
    <string name="delete">DELETE</string>
    <string name="_4">4</string>
    <string name="ghi">GHI</string>
    <string name="_5">5</string>
    <string name="jkl">JKL</string>
    <string name="_6">6</string>
    <string name="mno">MNO</string>
    <string name="hold">HOLD</string>
    <string name="_7">7</string>
    <string name="pqrs">PQRS</string>
    <string name="_8">8</string>
    <string name="tuv">TUV</string>
    <string name="_9">9</string>
    <string name="wxyz">WXYZ</string>
    <string name="contacts">CONTACTS</string>
    <string name="star">*</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="hash">#</string>
    <string name="dial">DIAL</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_call">CallActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
